--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: dborione <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/11/03 10:18:41 by dborione          #+#    #+#              #
-#    Updated: 2022/11/03 10:18:57 by dborione         ###   ########.fr        #
+#    Created: 2022/10/26 12:59:14 by dborione          #+#    #+#              #
+#    Updated: 2022/10/26 13:25:19 by dborione         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,14 +15,27 @@ CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
 #	Sources
-SRCS = main.c	\
-		parsing.c	\
+#	SRCS := $(shell find . -name '*.c')
+SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c	ft_isprint.c	\
+	   ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c	\
+	   ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c	\
+	   ft_strchr.c  ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c	\
+	   ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c	\
+	   ft_substr.c	ft_strjoin.c ft_strtrim.c ft_itoa.c	\
+	   ft_strmapi.c ft_striteri.c ft_split.c	\
+	   ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c	\
+		ft_split.c	\
+
+BONUS =	ft_lstadd_front_bonus.c ft_lstnew_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c	\
+		ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c \
+		ft_lstmap_bonus.c	\
 
 #	Objects
 OBJS = $(SRCS:.c=.o)
+B_OBJS = $(BONUS:.c=.o)
 
 #	Others
-NAME = push_swap.a
+NAME = libft.a
 RM = rm -f
 
 #	Colours
@@ -32,8 +45,6 @@ RED = \033[31m
 DEFAULT = \033[0m
 
 #	Targets
-all :	$(NAME)
-
 .c.o:
 	$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
 
@@ -41,17 +52,21 @@ $(NAME): $(OBJS)
 	ar rcs $(NAME) $(OBJS)
 	@echo "$(GREEN)[Done!]$(DEFAULT)"
 
+all :	$(NAME)
+
+bonus: $(OBJ) $(B_OBJS)
+	ar rcs $(NAME) $(OBJ) $(B_OBJS)
+
 #	Cleaning
 clean:
 	@echo "$(YELLOW)[Cleaning...]$(DEFAULT)"
-	$(RM) $(OBJS)
-	@echo "$(RED)[Objects Cleaned!]$(DEAFULT)"
-
+	$(RM) $(OBJS) $(B_OBJS)
+	@echo "$(RED)[Clean Done!]$(DEAFULT)"
 
 fclean: clean
 	$(RM) $(NAME)
-	@echo "$(RED)[Executable File Cleaned!]$(DEFAULT)"
+	@echo "$(RED)[Fclean Done!]$(DEFAULT)"
 
 re: fclean all
 
-.PHONY:	clean fclean re all
+.PHONY:	clean fclean re all bonus
